diesel_compile_tests/tests/fail/belongs_to_invalid_option_syntax.stderr
error: `belongs_to` is either unexpected or has bad format
  --> $DIR/belongs_to_invalid_option_syntax.rs:29:10
   |
29 | #[diesel(belongs_to)]
   |          ^^^^^^^^^^
